--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "godict",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "search words by cli",
   "main": "index.js",
+  "bin": {
+    "godict": "./bin/app.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
