--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "godict",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "search words by cli",
   "main": "index.js",
   "bin": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ices1/GoDict#readme",
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "commander": "^2.19.0"
   }
 }
